OMG, FINALLY FIXED OVERFLOW AND SCROLL REVEAL BUG, HURRAY!

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -1,12 +1,11 @@
 html {
 	font-size: 62.5%;
-	width: 100%;
-	overflow-x: hidden;
 }
 
 body {
 	font-family: 'Montserrat', sans-serif;
 	text-align: center;
+	height: 100%;
 	width: 100%;
 	margin: 0px;
 	padding: 0px;
