--- a/src/style/layout/_sections.scss
+++ b/src/style/layout/_sections.scss
@@ -14,7 +14,7 @@ section {
 #welcome-section,
 #particles-js {
 	min-height: 100vh;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -24,7 +24,7 @@ section {
 	background: $white-color;
 	padding: 0rem 5.6rem;
 	margin-bottom: 0;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
 	bottom: 0;
@@ -87,7 +87,7 @@ section {
 		}
 
 		& a {
-			font-size: 2.4rem;
+			font-size: 2.2rem;
 			// Responsive for opening paragraph a
 			@include respond(phone) {
 				font-size: 2rem;
@@ -297,5 +297,17 @@ section {
 				font-size: 2rem;
 			}
 		}
+	}
+}
+
+// Media Query to fix white bar space
+@media only screen and (max-width: 600px) {
+	#welcome-section,
+	#about,
+	#projects,
+	#contact,
+	.footer {
+		width: 100vw;
+		overflow-x: hidden;
 	}
 }
